--- a/app.env
+++ b/app.env
@@ -5,3 +5,11 @@ SERVER_ADDRESS=0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=12345678123456781234567812345678
 
 ACCESS_TOKEN_DURATION=10023m
+
+
+
+EMAIL_FROM=admin@admin.com
+SMTP_HOST=smtp.mailtrap.io
+SMTP_USER=7b69e7e5b66196
+SMTP_PASS=75d6f0cad186bd
+SMTP_PORT=587
