--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2 # More information on this action can be found below in the 'AWS Credentials' section
+        uses: aws-actions/configure-aws-credentials@v # More information on this action can be found below in the 'AWS Credentials' section
         with:
-          role-to-assume: $ {{ secerts.CONFIGURE_AWS_KEY }}
+          role-to-assume: ${{ secrets.CONFIGURE_AWS_KEY }}
           aws-region: ap-south-1
 
       - name: Login to Amazon ECR
