--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,9 @@ jobs:
         with:
           role-to-assume: ${{ secrets.CONFIGURE_AWS_KEY }}
           aws-region: ap-south-1
+        permissions:
+          id-token: write
+          contents: read
 
       - name: Login to Amazon ECR
         id: login-ecr
