--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,13 +14,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2 # More information on this action can be found below in the 'AWS Credentials' section
+        uses: aws-actions/configure-aws-credentials@v1 
         with:
-          role-to-assume: ${{ secrets.CONFIGURE_AWS_KEY }}
+          aws-access-key-id: $ {{secrets.aws_access_key_id}}
+          aws-secret-key: $ {{secrets.aws_secret_key }}
           aws-region: ap-south-1
-          permissions:
-            id-token: write
-            contents: read
+          
 
       - name: Login to Amazon ECR
         id: login-ecr
