--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,9 +16,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1 
         with:
-          aws-access-key-id: $ {{secrets.aws_access_key_id}}
-          aws-secret-access-key: $ {{secrets.aws_secret_key }}
-          aws-region: ap-south-1
+          aws-access-key-id: $ {{ secrets.aws_access_key_id }}
+          aws-secret-access-key: $ { {secrets.aws_secret_key }}
+          aws-region: eu-west-1
           
 
       - name: Login to Amazon ECR
