--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,8 +17,8 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1 
         with:
           aws-access-key-id: $ {{ secrets.aws_access_key_id }}
-          aws-secret-access-key: $ { {secrets.aws_secret_key }}
-          aws-region: eu-west-1
+          aws-secret-access-key: $ {{ {secrets.aws_secret_key }}
+          aws-region: ap-south-1
           
 
       - name: Login to Amazon ECR
