--- a/app.env
+++ b/app.env
@@ -2,6 +2,8 @@ DB_DRIVER=postgres
 DB_SOURCE=postgres://postgres:1235789@localhost:5432/ask_me?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:8080
 
+GIN_MODE=release
+
 TOKEN_SYMMETRIC_KEY=12345678123456781234567812345678
 
 ACCESS_TOKEN_DURATION=10023m
