--- a/app.env
+++ b/app.env
@@ -1,17 +1,12 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgres://postgres:1235789@localhost:5432/ask_me?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:8080
-
-GIN_MODE=release
-
+GIN_MODE=debug
 TOKEN_SYMMETRIC_KEY=12345678123456781234567812345678
-
 ACCESS_TOKEN_DURATION=10023m
-
-
-
 EMAIL_FROM=admin@admin.com
 SMTP_HOST=smtp.mailtrap.io
 SMTP_USER=7b69e7e5b66196
 SMTP_PASS=75d6f0cad186bd
 SMTP_PORT=587
+MIGRATION_URL=file://db/migration
